[WR] Fixed width being too large

--- a/style.scss
+++ b/style.scss
@@ -723,7 +723,8 @@ ul.CTAs {
     grid-gap: 16px;
     overflow: auto;
     white-space: nowrap;
-    width: calc(100vw - 250px - 12vw); // 100vw=width, 250px=sidebar, 12vw=padding
+    
+    width: calc(min(1280px, 88vw, (100vw - 250px - 12vw - 10px))); // 100vw=width, 250px=sidebar, 12vw=padding, 10px because its too large otherwise
     &::-webkit-scrollbar {
         width: 4px;
         height: 4px;
@@ -752,7 +753,7 @@ ul.CTAs {
         margin-top: 5vw;
     }
     #wr-game-buttons {
-        width: calc(100vw - 0px - 12vw);
+        width: calc(min(1280px, 88vw, (100vw - 0px - 12vw - 10px)));
     }
 }
 
